syntax = "proto3";

package pbdht;



message NbsNode{
    bytes Nbsaddr =1;
    bytes INetAddr =2;
}




message NbsNodeList{
    repeated NbsNode Nodes = 1;
    bool HaveData = 2;
    bytes data = 3;
}





